--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     .img-sec {
       height: 32%;
       width: 100%;
-      background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('images/image-header-mobile.jpg');
+      background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('image-header-mobile.jpg');
       background-size: cover;
     }
 
@@ -99,7 +99,7 @@
       }
 
       .img-sec {
-        background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('images/image-header-desktop.jpg');
+        background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('image-header-desktop.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         width: 100%;
