--- a/index.html
+++ b/index.html
@@ -10,128 +10,9 @@
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Inter">
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Lexend+Deca">
   <title>Frontend Mentor | Stats preview card component</title>
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html {
-      font-size: 15px;
-    }
-
-    body {
-      height: 100vh;
-      background: hsl(233, 47%, 7%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .card {
-      width: 375px;
-      height: 90%;
-      background: hsl(244, 38%, 16%);
-      border-radius: 5px;
-      text-align: center;
-      font-family: 'inter';
-    }
-
-    .img-sec {
-      height: 32%;
-      width: 100%;
-      background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('image-header-mobile.jpg');
-      background-size: cover;
-    }
-
-    h2 {
-      font-size: 2.5rem;
-      color: white;
-      padding: 2rem 1rem;
-      letter-spacing: -1px;
-    }
-
-    h2 span {
-      color: hsl(277, 64%, 61%);
-    }
-
-    .main-paragraph {
-      font-size: 1rem;
-      padding: 0 3.5rem;
-      color: hsla(0, 0%, 100%, 0.75);
-    }
-
-    .overview {
-      padding: 1.5rem;
-    }
-
-    .overview span {
-      font-size: 2rem;
-      font-weight: bold;
-      color: white;
-    }
-
-    .overview p {
-      font-size: 12px;
-      font-weight: bold;
-      color: hsla(0, 0%, 100%, 0.6);
-    }
-
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-
-    @media (min-width: 1440px) {
-      .card {
-        height: 25rem;
-        width: 60rem;
-        background: hsl(244, 38%, 16%);
-        display: flex;
-        flex-direction: row-reverse;
-      }
-
-      .img-sec {
-        background: linear-gradient(hsla(277, 100%, 25%, 0.514) 100%, rgba(255, 255, 255, 0)), url('image-header-desktop.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 100%;
-      }
-
-      .info {
-        text-align: left;
-      }
-
-      h2 {
-        font-size: 2.5rem;
-        padding: 2rem 3rem;
-      }
-
-      .main-paragraph {
-        font-size: 1rem;
-      }
-
-      .overviews {
-        margin: 2rem;
-      }
-
-      .overview {
-        display: inline-block;
-      }
-
-      .overview p {
-        font-size: 1rem;
-      }
-    }
-  </style>
 </head>
 
 <body>
